first prototype of todo-app

--- a/base/templates/base/login_form.html
+++ b/base/templates/base/login_form.html
@@ -27,5 +27,5 @@
     <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
 </form>
 <p class="card-text mb-0 mt-3">Don't have an account yet?</p>
-<a class="btn btn-link btn-lg  p-0 fs-6" href="{% url 'register-user'%}">Register</a>
+<a class="btn btn-link btn-lg  p-0 fs-6" href="{% url 'Base:register-user'%}">Register</a>
 {% endblock auth_card_content %}
