--- a/base/templates/base/register_form.html
+++ b/base/templates/base/register_form.html
@@ -23,5 +23,5 @@
     <button class="btn btn-primary btn-lg btn-block" type="submit">Register</button>
 </form>
 <p class="card-text mb-0 mt-3">Already have an account?</p>
-<a class="btn btn-link btn-lg  p-0 fs-6" href="{% url 'login-user' %}">Sign In</a>
+<a class="btn btn-link btn-lg  p-0 fs-6" href="{% url 'Base:login-user' %}">Sign In</a>
 {% endblock auth_card_content %}
