--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
 </div>
 <nav class="navbar navbar-expand-sm bg-body-tertiary" style="z-index: 1;">
     <div class="container-fluid">
-        <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Home</a>
+        <a class="navbar-brand mb-0 h1" href="{% url 'Base:home' %}">Home</a>
         {% if user.is_authenticated %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
             aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,11 +25,11 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li>
-                            <a class="dropdown-item" href="{% url 'profile-user' %}">Show Profile</a>
+                            <a class="dropdown-item" href="{% url 'Base:profile-user' %}">Show Profile</a>
                         </li>
                         <li>
                             <a class="dropdown-item text-danger justify-content-center align-items-center"
-                                href="{% url 'logout-user' %}">Logout
+                                href="{% url 'Base:logout-user' %}">Logout
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
@@ -43,7 +43,7 @@
             </ul>
         </div>
         {% else %}
-        <a class="nav-link active ms-auto me-1" href="{% url 'login-user' %}">Login</a>
+        <a class="nav-link active ms-auto me-1" href="{% url 'Base:login-user' %}">Login</a>
         {% endif %}
     </div>
 </nav>
