--- a/todolist/templates/todolist/todo_home.html
+++ b/todolist/templates/todolist/todo_home.html
@@ -44,14 +44,14 @@
     <main>
         <div class="container-fluid pt-4">
             <div class="hstack mb-3">
-                <a type="button" class="text-primary me-2 d-lg-none" data-bs-toggle="offcanvas" aria-controls="offcanvasResponsive"
+                <a class="me-2 d-lg-none icon-link fs-1" data-bs-toggle="offcanvas" aria-controls="offcanvasResponsive"
                 data-bs-target="#offcanvasResponsive">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                   </svg>
                 </a>
                 <h1 class="m-0 d-block text-truncate">{{selected_list.title}}</h1>
-                <a class="ms-auto" data-bs-toggle="modal" data-bs-target="#newTaskModal">
+                <a class="ms-auto icon-link fs-2" data-bs-toggle="modal" data-bs-target="#newTaskModal">
                     <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                       </svg>
@@ -60,15 +60,15 @@
             {% if tasks %}
             <div class="container-fluid p-0" id="tasks">
                 {% for task in tasks %}
-                <div class="hstack task-container rounded bg-body-tertiary p-3 my-2">
+                <div class="hstack task-container rounded bg-body-tertiary ps-3 p-2 my-2">
                     {% if task.status %}
-                    <form action="{% url 'Todolist:todo-togglestatus-task' selected_list.pk task.pk %}" method="POST">
+                    <form action="{% url 'Todolist:todo-togglestatus-task' selected_list.pk task.pk %}" method="POST" style="height: 24px;">
                         {% csrf_token %}
                         <input type="image" src="{% static 'images/check-circle-fill.svg' %}" alt="Submit"
                             style="width: 24px; height: 24px;">
                     </form>
                     {% else %}
-                    <form action="{% url 'Todolist:todo-togglestatus-task' selected_list.pk task.pk %}" method="POST">
+                    <form action="{% url 'Todolist:todo-togglestatus-task' selected_list.pk task.pk %}" method="POST" style="height: 24px;">
                         {% csrf_token %}
                         <input type="image" src="{% static 'images/circle.svg' %}" alt="Submit"
                             style="width: 24px; height: 24px;">
@@ -87,12 +87,10 @@
                                 d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
                         </svg>
                     </a> -->
-                    <a class="text-danger ms-auto" data-bs-toggle="modal" data-bs-target="#deleteModal"
-                        data-bs-taskid="{{task.pk}}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                            fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.524a.5.5 0 0 0-.524.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.524ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z" />
-                        </svg></a>
+                    <a class="text-body-tertiary ms-auto icon-link fs-2" data-bs-toggle="modal" data-bs-target="#deleteModal"
+                        data-bs-taskid="{{task.pk}}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                          </svg></a>
                 </div>
                 {% endfor %}
             </div>
