--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,6 +11,11 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="todo/">ToDo</a>
+                </li>
+            </ul>
             <span class="navbar-text ms-auto me-1">{{request.user.username}}</span>
             <ul class="navbar-nav mt-1" style="--bs-scroll-height: 100px">
                 <li class="nav-item dropdown">
