--- a/todolist/templates/todolist/todo_home.html
+++ b/todolist/templates/todolist/todo_home.html
@@ -22,21 +22,9 @@
                     
                 </div>
                 <div class="container {% if not lists %}text-center{% endif %}">
-                    {% if lists %}
-                    <nav class="nav flex-column nav-pills">
-                        {% for list in lists %}
-                        <li class="nav-item hstack rounded  my-1 {% if activepk == list.pk %}bg-primary{% else %}bg-body-tertiary{% endif %}">
-                            <a class="nav-link text-break fs-5 me-2 {% if activepk == list.pk %}text-light{% endif %}"
-                                href="{% url 'Todolist:todo-list-view' list.pk %}" style="overflow-wrap: break-word;">{{list.title}}</a>
-                            <a class="text-body-tertiary icon-link ms-auto me-2 fs-3" href="{% url 'Todolist:todo-deletelist' list.pk %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                              </svg></a>
-                        </li>
-                        {% endfor %}
+                    <nav class="nav flex-column nav-pills" id="lists-wrapper">
+                    
                     </nav>
-                    {% else %}
-                    <h3>No lists yet!</h3>
-                    {% endif %}
                 </div>
             </div>
         </div>
