background and padding

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -159,7 +159,7 @@
     <img src="{% static 'images/lwh.svg' %}" style="width: 100%;">
 </div> -->
 
-<section class="container-fluid w-100 p-3 bg-body-tertiary" style="z-index: 1;">
+<section class="container-fluid w-100 px-3 pb-3 " style="z-index: 1;">
     <div class="card text-center">
         <div class="card-header">
           Featured
