--- a/todolist/templates/todolist/todo_home.html
+++ b/todolist/templates/todolist/todo_home.html
@@ -21,10 +21,27 @@
                       </svg>New list</a>
                     
                 </div>
-                <div class="container {% if not lists %}text-center{% endif %}">
-                    <nav class="nav flex-column nav-pills" id="lists-wrapper">
-                    
-                    </nav>
+                <div class=" d-flex container {% if not lists %}text-center{% endif %}">
+                    <div class="nav flex-column nav-pills w-100" id="lists-wrapper">
+                        <div class="nav-item hstack rounded my-1 bg-danger  w-100">
+                            <button class="nav-link text-break fs-5 me-2 text-light select-list-item" style="overflow-wrap: break-word;">TEST 1</button>
+                            <button type="button" class="btn p-0 text-body-tertiary icon-link ms-auto me-2 fs-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                            </svg></button>
+                        </div>
+                        <div class="nav-item hstack rounded my-1 bg-danger todlist-list-item">
+                            <button class="nav-link text-break fs-5 me-2 text-light select-list-item" style="overflow-wrap: break-word;">TEST 2</button>
+                            <button type="button" class="btn p-0 text-body-tertiary icon-link ms-auto me-2 fs-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                            </svg></button>
+                        </div>
+                        <div class="nav-item hstack rounded my-1 bg-danger todlist-list-item">
+                            <button class="nav-link text-break fs-5 me-2 text-light select-list-item" style="overflow-wrap: break-word;">TEST 3</button>
+                            <button type="button" class="btn p-0 text-body-tertiary icon-link ms-auto me-2 fs-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                            </svg></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
