--- a/todolist/templates/todolist/todo_home.html
+++ b/todolist/templates/todolist/todo_home.html
@@ -3,7 +3,11 @@
 {% load static %}
 
 {% block content %}
-<div class="container-fluid sidebar-layout">
+<script>
+    let empty_icon_url = "{% static 'images/rocket.png' %}";
+</script>
+
+<div class="d-flex flex-grow-1 sidebar-layout">
     <aside id="sidebar">
         <div class="offcanvas-lg offcanvas-start" tabindex="-1" id="offcanvasResponsive"
             aria-labelledby="offcanvasResponsiveLabel">
@@ -16,10 +20,12 @@
                 <div class="container-fluid pb-2 hstack">
                     <h1 class="me-2 my-0">Your lists</h1>
                     <a class="ms-auto fs-5 icon-link text-decoration-none" data-bs-toggle="modal"
-                    data-bs-target="#newListModal"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-                      </svg>New list</a>
-                    
+                        data-bs-target="#newListModal"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+                        </svg>New list</a>
+
                 </div>
                 <div class=" d-flex container {% if not lists %}text-center{% endif %}">
                     <div class="nav flex-column nav-pills w-100" id="lists-wrapper">
@@ -28,23 +34,27 @@
             </div>
         </div>
     </aside>
-    <main>
-        <div class="container-fluid pt-4">
-            <div class="hstack mb-3">
-                <a class="me-2 d-lg-none icon-link fs-1" data-bs-toggle="offcanvas" aria-controls="offcanvasResponsive"
+    <main class="d-flex flex-grow-1 flex-column p-0 m-0">
+        <div class="hstack mb-3 pt-4 px-3">
+            <a class="me-2 d-lg-none icon-link fs-1" data-bs-toggle="offcanvas" aria-controls="offcanvasResponsive"
                 data-bs-target="#offcanvasResponsive">
-                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                  </svg>
-                </a>
-                <h1 class="m-0 d-block text-truncate">{{selected_list.title}}</h1>
-                <a class="ms-auto icon-link fs-2" data-bs-toggle="modal" data-bs-target="#newTaskModal">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-                      </svg>
-                </a>
-            </div>
-            <div class="container-fluid p-0" id="tasks">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-list"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                </svg>
+            </a>
+            <h1 class="m-0 d-block text-truncate">{{selected_list.title}}</h1>
+            <a class="ms-auto icon-link fs-2" data-bs-toggle="modal" data-bs-target="#newTaskModal">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
+                    class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+                </svg>
+            </a>
+        </div>
+        <div class="d-flex flex-grow-1 flex-column">
+            <div class="container-fluid p-0 px-3" id="tasks">
             </div>
         </div>
     </main>
@@ -52,30 +62,27 @@
 
     <!-- Modals -->
     <!-- New List Modal -->
-    <form action="{% url 'Todolist:todo-newlist' %}" method="POST">
-        {% csrf_token %}
-        <div class="modal" id="newListModal" tabindex="-1" aria-labelledby="newListModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5">Create new list</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal" id="newListModal" tabindex="-1" aria-labelledby="newListModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Create new list</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-floating">
+                        <input id="newListTitleInput" class="form-control" name='list-name' placeholder="name"
+                            required />
+                        <label for="newListTitleInput">List name</label>
                     </div>
-                    <div class="modal-body">
-                        <div class="form-floating">
-                            <input id="floatingInput" class="form-control" name='list-name' placeholder="name"
-                                required />
-                            <label for="floatingInput">List name</label>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" value="SUBMIT" class="btn btn-primary">Create</button>
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="newListModalSubmitBtn">Create</button>
                 </div>
             </div>
         </div>
-    </form>
+    </div>
 
     <!-- Delete Task Modal-->
     <div class="modal" id="deleteModal" tabindex="-1" aria-labelledby="deleteTaskLabel" aria-hidden="true">
@@ -97,7 +104,7 @@
     </div>
 
     <!-- New task Modal -->
-    <form action="{% url 'Todolist:todo-newtask' selected_list.pk %}" method="POST">
+    <form action="{% url 'Todolist:todo-newtask' selected_list.pk %}" method="POST" id="new-list-form">
         {% csrf_token %}
         <div class="modal" id="newTaskModal" tabindex="-1" aria-labelledby="newTaskModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
@@ -113,7 +120,8 @@
                             <label for="floatingInputName">Task name</label>
                         </div>
                         <div class="form-floating">
-                            <textarea id="floatingInputDesc" class="form-control" name='task-description' placeholder="description" style="height: 100px;"></textarea>
+                            <textarea id="floatingInputDesc" class="form-control" name='task-description'
+                                placeholder="description" style="height: 100px;"></textarea>
                             <label for="floatingInputDesc">Task description</label>
                         </div>
                     </div>
