--- a/todolist/templates/todolist/todo_home.html
+++ b/todolist/templates/todolist/todo_home.html
@@ -7,16 +7,16 @@
     let empty_icon_url = "{% static 'images/rocket.png' %}";
 </script>
 
-<div class="d-flex flex-grow-1 sidebar-layout">
-    <aside id="sidebar">
-        <div class="offcanvas-lg offcanvas-start" tabindex="-1" id="offcanvasResponsive"
+<div class="d-flex flex-grow-1 sidebar-layout h-100 overflow-hidden">
+    <aside id="sidebar" class="h-100">
+        <div class="offcanvas-lg offcanvas-start h-100" tabindex="-1" id="offcanvasResponsive"
             aria-labelledby="offcanvasResponsiveLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasResponsiveLabel"></h5>
                 <button type="button" class="btn-close" data-bs-dismiss='offcanvas'
                     data-bs-target='#offcanvasResponsive' aria-label="close" id="closeOffcanvasBtn"></button>
             </div>
-            <div id='offcanvasBody' class="offcanvas-body p-2 pt-lg-4 px-lg-3 vstack">
+            <div id='offcanvasBody' class="offcanvas-body pt-lg-4 px-lg-3 vstack h-100 overflow-hidden">
                 <div class="container-fluid pb-2 hstack">
                     <h1 class="me-2 my-0">Your lists</h1>
                     <a class="ms-auto fs-5 icon-link text-decoration-none" data-bs-toggle="modal"
@@ -27,15 +27,15 @@
                         </svg>New list</a>
 
                 </div>
-                <div class=" d-flex container {% if not lists %}text-center{% endif %}">
-                    <div class="nav flex-column nav-pills w-100" id="lists-wrapper">
+                <div class="d-flex container overflow-auto">
+                    <div class="nav nav-pills w-100" id="lists-wrapper">
                     </div>
                 </div>
             </div>
         </div>
     </aside>
-    <main class="d-flex flex-grow-1 flex-column p-0 m-0">
-        <div class="hstack mb-3 pt-4 px-3">
+    <main class="d-flex flex-grow-1 flex-column p-0 m-0 h-100 overflow-hidden">
+        <div class="hstack mb-2 pt-4 px-3">
             <a class="me-2 d-lg-none icon-link fs-1 offcanvas-toggler" data-bs-toggle="offcanvas"
                 aria-controls="offcanvasResponsive" data-bs-target="#offcanvasResponsive">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-list"
@@ -44,7 +44,7 @@
                         d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
                 </svg>
             </a>
-            <h1 class="m-0 d-block text-truncate">{{selected_list.title}}</h1>
+            <h1 class="m-0 d-block text-truncate" id="listTitleHeading">{{selected_list.title}}</h1>
             <a class="ms-auto icon-link fs-2" data-bs-toggle="modal" data-bs-target="#newTaskModal">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
                     class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
@@ -53,7 +53,7 @@
                 </svg>
             </a>
         </div>
-        <div class="d-flex flex-grow-1 flex-column">
+        <div class="d-flex flex-grow-1 flex-column overflow-auto">
             <div class="container-fluid p-0 px-3" id="tasks">
             </div>
         </div>
@@ -85,8 +85,8 @@
         </div>
     </div>
 
-    <!-- Delete Task Modal-->
-    <div class="modal" id="deleteModal" tabindex="-1" aria-labelledby="deleteTaskLabel" aria-hidden="true">
+    <!-- Delete Modal-->
+    <div class="modal" id="deleteModal" tabindex="-1" aria-labelledby="deleteLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -98,7 +98,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <a href="" role="button" class="btn btn-danger">Delete</a>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="deleteModalSubmitBtn">Delete</a>
                 </div>
             </div>
         </div>
