continued refactoring of todo.js and other minor changes

--- a/todolist/templates/todolist/todo_home.html
+++ b/todolist/templates/todolist/todo_home.html
@@ -28,7 +28,7 @@
 
                 </div>
                 <div class="d-flex container overflow-auto">
-                    <div class="nav nav-pills w-100" id="lists-wrapper">
+                    <div class="nav nav-pills w-100 d-flex" id="lists-wrapper">
                     </div>
                 </div>
             </div>
