--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -61,7 +61,7 @@ body {
     content: "";
     position: absolute;
     width: 50%;
-    border: solid #fa7268;
+    border: solid rgb(13, 110, 253);
     /* border: solid #fe019a; */
     /* border: solid #0d6efd; */
 }
@@ -140,8 +140,8 @@ body {
     left: 17%;
     height: 50px;
     width: 33%;
-    border-right: 5px solid #fa7268;
-    border-bottom: 5px solid #fa7268;
+    border-right: 5px solid rgb(13, 110, 253);
+    border-bottom: 5px solid rgb(13, 110, 253);
     border-bottom-right-radius: 25px;
 }
 @media (max-width: 399px) {
