--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="todo/">ToDo</a>
+                    <a class="nav-link" href="falkmaximilian.de/todo/">ToDo</a>
                 </li>
             </ul>
             <span class="navbar-text ms-auto me-1">{{request.user.username}}</span>
