--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -149,12 +149,12 @@
                 <h1 class="fs-3">Apple Inc.</h1>
                 <h2 class="fs-4">Specialist</h2>
                 <p class="fs-5 pt-3">Fähigkeit, in einer sehr aktiven Umgebung für ein außergewöhnliches Kundenerlebnis
-                    zu sorgen, sowie Freude am Umgang mit Menschen.</p>
+                    zu sorgen, sowie Freude am Umgang mit Menschen</p>
                 <p class="fs-5">Starkes Interesse an Technologie, insbesondere an Apple Produkten, und schnelle
-                    Auffassungsgabe beim Kennenlernen neuer Produkte und Features.</p>
+                    Auffassungsgabe beim Kennenlernen neuer Produkte und Features</p>
                 <p class="fs-5">Starke Fähigkeiten in der Kommunikation, Selbstsicherheit beim freien Sprechen vor
-                    kleinen Gruppen sowie vor Einzelpersonen.</p>
-                <p class="pt-3">Nov. 2021 - Aug. 2023</p>
+                    kleinen Gruppen sowie vor Einzelpersonen</p>
+                <p class="pt-3">1. November 2021 - 31. August 2023</p>
                 <!-- <h1 class="fs-3">Apple Inc.</h1> -->
                 <!-- <h2 class="fs-4">Sales Specialist</h2> -->
             </div>
@@ -163,15 +163,15 @@
                 <h2 class="fs-4">Produktionshelfer</h2>
                 <p class="pt-3 fs-5">Unterstützung der Produktion in der Füllerei und Aushilfe bei der Auslieferung an
                     Kunden im Rahmen eines Ferialpraktikums</p>
-                <p class="fs-6 pt-3">Jun 2018 - Sep 2018</p>
+                <p class="fs-6 pt-3">1. Juni 2018 - 30. September 2018</p>
             </div>
             <div class="mybox">
                 <h1 class="fs-3">WiewerK</h1>
-                <h2 class="fs-4">Aushilfe</h2>
+                <h2 class="fs-4">Technischer Stage Hand</h2>
                 <p class="pt-3 fs-5">Unterstützung bei Planung, Auf- und Abbau und technischer Betreuung von
-                    Veranstaltungen.</p>
+                    Veranstaltungen</p>
                 <p class="fs-5">Licht-, Ton – und medientechnische Unterstützung</p>
-                <p class="fs-6 pt-3">Aug. 2016 - Jun. 2018</p>
+                <p class="fs-6 pt-3">1. August 2016 - 30. Juni 2018</p>
 
             </div>
             </div>
