changed job description

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -167,7 +167,7 @@
             </div>
             <div class="mybox">
                 <h1 class="fs-3">WiewerK</h1>
-                <h2 class="fs-4">Technischer Stage Hand</h2>
+                <h2 class="fs-4">Assistenz Technischer Leitung</h2>
                 <p class="pt-3 fs-5">Unterstützung bei Planung, Auf- und Abbau und technischer Betreuung von
                     Veranstaltungen</p>
                 <p class="fs-5">Licht-, Ton – und medientechnische Unterstützung</p>
